--- a/k8s-dev.yaml
+++ b/k8s-dev.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jenkins-demo
   namespace: devlopment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: jenkins-demo
@@ -14,7 +14,7 @@ spec:
         app: jenkins-demo
     spec:
       containers:
-      - image: xianchao/jenkins-demo:<BUILD_TAG>
+      - image: kbshire/jenkins-demo:<BUILD_TAG>
         imagePullPolicy: IfNotPresent
         name: jenkins-demo
         env:
